test/custom/inference/bad/typeclass_unbound_predicate_variable.mlt
class H 'a { h : 'a }
let ['a] [H 'b] f = fun (x : 'a) -> x
